# ai-infra

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  deploy.sh  render.yaml  test_data.xlsx  test_rest_api.sh
.github/workflows/: deploy.yml  rust.yml
proto/: ai_infra.proto
src/: helpers.rs  lib.rs  models.rs
tests/: integration_tests.rs
