[package]
name = "ai_infra"
version = "0.1.0"
edition = "2024"

[dependencies]
calamine = { version = "0.22", features = ["dates"] }
diesel = { version = "2.2.0", features = ["postgres", "chrono"]}
dotenvy = "0.15" # For loading DATABASE_URL from .env
time = { version = "0.3", features = ["macros", "formatting", "parsing"] }
num-traits = "0.2"
chrono = "0.4.42"
itertools = "0.14.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "net"] }
axum = { version = "0.7", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tower-http = { version = "0.6.10", features = ["cors"] }

[dev-dependencies]
serial_test = "3.4.0"
